--- a/package.json
+++ b/package.json
@@ -1,54 +1,52 @@
 {
-  "name": "tdd",
+  "name": "weather",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "1.2.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "5.9.2",
-    "@react-navigation/stack": "5.14.2",
-    "axios": "0.21.1",
-    "json-schema-yup-transformer": "1.5.8",
-    "moment": "2.29.1",
-    "react": "16.13.1",
-    "react-hook-form": "6.15.1",
-    "react-native": "0.63.4",
-    "react-native-gesture-handler": "1.9.0",
-    "react-native-get-location": "2.0.0",
-    "react-native-linear-gradient": "2.5.6",
-    "react-native-reanimated": "1.13.2",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "2.17.1",
-    "react-redux": "7.2.2",
-    "redux": "4.0.5",
-    "redux-saga": "1.1.3",
-    "yup": "0.32.8"
+    "@hookform/resolvers": "^3.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.6",
+    "json-schema-yup-transformer": "^1.6.12",
+    "moment": "^2.29.4",
+    "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-native": "0.71.7",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-location": "^3.0.1",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.8.4",
-    "@babel/runtime": "7.8.4",
-    "@react-native-community/eslint-config": "1.1.0",
-    "@testing-library/jest-native": "3.4.3",
-    "@testing-library/react-native": "7.1.0",
-    "@types/jest": "26.0.20",
-    "@types/react-native": "0.63.2",
-    "@types/react-redux": "7.1.16",
-    "@types/react-test-renderer": "16.9.2",
-    "@types/yup": "0.29.11",
-    "babel-jest": "25.1.0",
-    "eslint": "6.5.1",
-    "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.59.0",
-    "nock": "13.0.7",
-    "react-test-renderer": "16.13.1",
-    "typescript": "3.8.3"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/react-native": "^12.0.1",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.9",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   }
 }
