--- a/ios/weather/Info.plist
+++ b/ios/weather/Info.plist
@@ -36,7 +36,11 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Location is needed to display weather information in your region</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Location is needed to display weather information in your region</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Location is needed to display weather information in your region</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
